(bsp) Split off common part from ams-bsp distro

--- a/meta-ams-bsp/conf/distro/ams-bsp.conf
+++ b/meta-ams-bsp/conf/distro/ams-bsp.conf
@@ -2,30 +2,37 @@
 DISTRO = "ams-bsp"
 DISTRO_NAME = "AMS BSP Development Distribution"
 DISTRO_VERSION = "2023-Q1"
-
 BUILD_VARIANT = "prod"
-TARGET_VENDOR = "-ams-bsp"
 
-OPKG_ARGS_remove = "--prefer-arch-to-version"
+require conf/distro/poky.conf
+require ams-common.inc
 
 DISTRO_FEATURES_LIBC += "libc-locales"
+DISTRO_FEATURES += "pam vendor"
 
-# Override these in poky based distros
-POKY_DEFAULT_EXTRA_RDEPENDS = "packagegroup-core-boot"
-POKY_DEFAULT_EXTRA_RRECOMMENDS = "kernel-module-af-packet"
-DISTRO_EXTRA_RDEPENDS += " ${POKY_DEFAULT_EXTRA_RDEPENDS}"
-DISTRO_EXTRA_RRECOMMENDS += " ${POKY_DEFAULT_EXTRA_RRECOMMENDS}"
+PREFERRED_PROVIDER_virtual/kernel_mx6ul = "linux-imx"
 
+# # Override these in poky based distros
+# POKY_DEFAULT_EXTRA_RDEPENDS = "packagegroup-core-boot"
+# POKY_DEFAULT_EXTRA_RRECOMMENDS = "kernel-module-af-packet"
+# DISTRO_EXTRA_RDEPENDS += " ${POKY_DEFAULT_EXTRA_RDEPENDS}"
+# DISTRO_EXTRA_RRECOMMENDS += " ${POKY_DEFAULT_EXTRA_RRECOMMENDS}"
+
+# Enable all hardware related distro features, to give a base for
+# BSP machine features if combined to COMBINE_FEATURES.
 DISTRO_FEATURES = "\
   ${DISTRO_FEATURES_LIBC} \
   bluez5 \
   bluetooth \
   ext2 \
+  3g \
   ipv4 ipv6 \
+  irda \
   largefile \
   multiarch \
   opengl \
   pam \
+  pcmcia \
   ptest \
   usbgadget \
   systemd \
@@ -34,19 +41,15 @@ DISTRO_FEATURES = "\
   vulcan \
   xattr \
 "
-DISTRO_FEATURES_append = " "
 
-VIRTUAL-RUNTIME_init_manager = "systemd"
-DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
-PACKAGE_CLASSES ?= "package_ipk"
+DISTRO_FEATURES_append = "rauc "
+
+# # Run QA tests on recipes
+# INHERIT += "recipe_sanity"
+
+# # Activate config checker
+# INHERIT += "sanity"
 
 SANITY_TESTED_DISTROS = " \
   ubuntu-20.04 \n \
   "
-
-# It's a prebuild glibc designed to remove the differences between
-# host distros, meaning that native sstate objects can be shared
-# between host distros.
-
-# Do not do this if you are using package feeds.
-ERROR_QA_remove = "version-going-backwards"
