Fix sanity issue with meta-ams-bsp-phytecimx8 conf

--- a/meta-ams-bsp-phytecimx8/conf/layer.conf
+++ b/meta-ams-bsp-phytecimx8/conf/layer.conf
@@ -5,10 +5,10 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
             ${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "amsbspphytecimx8"
-BBFILE_PATTERN_amsbspphytecimx8 = "^${LAYERDIR}/"
-BBFILE_PRIORITY_amsbspphytecimx8 = "6"
-LAYERVERSION_amsbspphytecimx8 = "2"
-LAYERSERIES_COMPAT_amsbspphytecimx8 = "dunfell gatesgarth hardknott"
+BBFILE_COLLECTIONS += "ams-bsp-phytecimx8"
+BBFILE_PATTERN_ams-bsp-phytecimx8 = "^${LAYERDIR}/"
+BBFILE_PRIORITY_ams-bsp-phytecimx8 = "30"
+LAYERVERSION_ams-bsp-phytecimx8 = "3"
+LAYERSERIES_COMPAT_ams-bsp-phytecimx8 = "dunfell gatesgarth hardknott"
 
-LAYERDEPENDS_amsbspphytecimx8 = "amsbsp "
+LAYERDEPENDS_ams-bsp-phytecimx8 = "ams-bsp "
