(bsp) Update phytec-polis-imx8mm machine definition

--- a/meta-ams-bsp-phytecimx8/conf/machine/phyboard-polis-imx8mm.conf
+++ b/meta-ams-bsp-phytecimx8/conf/machine/phyboard-polis-imx8mm.conf
@@ -7,9 +7,9 @@ MACHINEOVERRIDES =. "mx8:mx8m:mx8mm:"
 
 # part of meta-freescale
 require conf/machine/include/imx-base.inc
-# Part of meta-phytecphytec layer
-include conf/machine/include/phyimx8.inc
-# Part of poky/meta
+# Part of meta-phytec layer
+require conf/machine/include/phyimx8.inc
+# Part of poky layer
 require conf/machine/include/tune-cortexa53.inc
 
 MACHINE_FEATURES += "emmc pci wifi bluetooth can tpm2 alsa"
@@ -64,6 +64,4 @@ KERNEL_IMAGETYPE = "Image"
 
 LOADADDR = ""
 UBOOT_MAKE_TARGET = ""
-
-# PREFERRED_VERSION_firmware-imx-8m = "8.12"
 
