Add kirkstone to layer compatibility

--- a/meta-ams-bsp/conf/layer.conf
+++ b/meta-ams-bsp/conf/layer.conf
@@ -9,8 +9,8 @@ BBFILE_COLLECTIONS += "ams-bsp"
 BBFILE_PATTERN_ams-bsp = "^${LAYERDIR}/"
 # High priority since it provides simple frame to develop BSP's in isolation
 # from applications
-BBFILE_PRIORITY_ams-bsp = "50"
-LAYERVERSION_ams-bsp = "3"
-LAYERSERIES_COMPAT_ams-bsp = "dunfell gatesgarth hardknott"
+BBFILE_PRIORITY_amsbsp = "50"
+LAYERVERSION_amsbsp = "3"
+LAYERSERIES_COMPAT_amsbsp = "dunfell gatesgarth hardknott kirkstone"
 
 LAYERDEPENDS_ams-bsp = " "
