Update ams-bsp distro
Introduce a propper structure and documentation
The distro is independent upon poky and any includes.

--- a/meta-ams-bsp/conf/distro/ams-bsp.conf
+++ b/meta-ams-bsp/conf/distro/ams-bsp.conf
@@ -1,55 +1,135 @@
-
+# Distro meta data
+#------------------------------------------------------------------------------
 DISTRO = "ams-bsp"
 DISTRO_NAME = "AMS BSP Development Distribution"
 DISTRO_VERSION = "2023-Q1"
 BUILD_VARIANT = "prod"
+DISTRO_VERSION = "kirkstone"
+VENDOR = "almedso"
+TARGET_VENDOR = "-${VENDOR}"
 
-require conf/distro/poky.conf
-require ams-common.inc
+# SDK definitions
+#------------------------------------------------------------------------------
+SDK_VENDOR = "-${VENDOR}sdk"
+SDK_VERSION := "${DISTRO_VERSION}"
+SDK_NAME = "${VENDOR}-${DISTRO}-${TCLIBC}-${SDK_ARCH}-${IMAGE_BASENAME}-${TUNE_PKGARCH}"
+SDKPATH = "/opt/${VENDOR}-${DISTRO}/${SDK_VERSION}"
 
-DISTRO_FEATURES_LIBC += "libc-locales"
-DISTRO_FEATURES += "pam vendor"
+# General definitions
+#------------------------------------------------------------------------------
+PACKAGE_CLASSES ?= "package_ipk"
+OPKG_ARGS:remove = "--prefer-arch-to-version"
 
-PREFERRED_PROVIDER_virtual/kernel_mx6ul = "linux-imx"
+VIRTUAL-RUNTIME_dev_manager = "udev"
+VIRTUAL-RUNTIME_init_manager = "systemd"
+DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
+VIRTUAL-RUNTIME_login_manager = "busybox"
+VIRTUAL-RUNTIME_syslog = ""
+VIRTUAL-RUNTIME_initscripts = ""
+DISTRO_FEATURES_RUNTIME_MANAGER = "systemd polkit"
 
-# # Override these in poky based distros
-# POKY_DEFAULT_EXTRA_RDEPENDS = "packagegroup-core-boot"
-# POKY_DEFAULT_EXTRA_RRECOMMENDS = "kernel-module-af-packet"
-# DISTRO_EXTRA_RDEPENDS += " ${POKY_DEFAULT_EXTRA_RDEPENDS}"
-# DISTRO_EXTRA_RRECOMMENDS += " ${POKY_DEFAULT_EXTRA_RRECOMMENDS}"
-
-# Enable all hardware related distro features, to give a base for
-# BSP machine features if combined to COMBINE_FEATURES.
+# Distro features
+#------------------------------------------------------------------------------
 DISTRO_FEATURES = "\
-  ${DISTRO_FEATURES_LIBC} \
-  bluez5 \
-  bluetooth \
-  ext2 \
-  3g \
-  ipv4 ipv6 \
-  irda \
-  largefile \
-  multiarch \
-  opengl \
-  pam \
-  pcmcia \
-  ptest \
-  usbgadget \
-  systemd \
-  wayland  \
-  wifi \
-  vulcan \
-  xattr \
-"
+  ${DISTRO_FEATURES_RUNTIME_MANAGER} \
+  "
+DISTRO_FEATURES += "alsa"
+# support of autoresize through InitRD
+DISTRO_FEATURES += "autoresize"
+DISTRO_FEATURES += "3g"
+DISTRO_FEATURES += "bluez5"
+DISTRO_FEATURES += "bluetooth"
+DISTRO_FEATURES += "ext2"
+DISTRO_FEATURES += "ext4"
+DISTRO_FEATURES += "ipv4 ipv6"
+DISTRO_FEATURES += "gplv"
+DISTRO_FEATURES += "gstreamer"
+# support of InitRD installation package
+DISTRO_FEATURES += "initrd"
+DISTRO_FEATURES += "irda"
+DISTRO_FEATURES += "largefile"
+DISTRO_FEATURES += "libc-locales"
+DISTRO_FEATURES += "multiarch"
+DISTRO_FEATURES += "opengl"
+DISTRO_FEATURES += "pci"
+DISTRO_FEATURES += "ptest"
+# Software update
+# DISTRO_FEATURES += "swupdate"
+# DISTRO_FEATURES += "rauc"
+DISTRO_FEATURES += "usbgadget"
+DISTRO_FEATURES += "usbhost"
+DISTRO_FEATURES += "vendor"
+DISTRO_FEATURES += "vulcan"
+# support of wayland
+DISTRO_FEATURES:append = " wayland pam "
+DISTRO_FEATURES += "wifi"
+DISTRO_FEATURES += "xattr"
+DISTRO_FEATURES += "zeroconf"
 
-DISTRO_FEATURES_append = "rauc "
+DISTRO_EXTRA_RDEPENDS = "packagegroup-core-boot"
 
-# # Run QA tests on recipes
-# INHERIT += "recipe_sanity"
+# INITRD addons to image
+DISTRO_EXTRA_RRECOMMENDS:append = " ${@bb.utils.contains('COMBINED_FEATURES', 'initrd', '${INITRD_PACKAGE}', '', d)} "
 
-# # Activate config checker
-# INHERIT += "sanity"
+# Preferred providers and versions
+#------------------------------------------------------------------------------
+PREFERRRED_PROVIDER_linux-mfgtool-base = "linux-imx-mfgtool"
 
+# Sanity checks and QA checks
+#------------------------------------------------------------------------------
 SANITY_TESTED_DISTROS = " \
   ubuntu-20.04 \n \
   "
+
+# QA check settings - a little stricter than the OE-Core defaults
+WARN_TO_ERROR_QA = "already-stripped compile-host-path install-host-path \
+                    installed-vs-shipped ldflags pn-overrides rpaths staticdev \
+                    unknown-configure-option useless-rpaths"
+ERROR_TO_WARN_QA = "version-going-backwards"
+ERROR_QA:remove = "${ERROR_TO_WARN_QA}"
+WARN_QA:append = " ${ERROR_TO_WARN_QA}"
+#
+# OELAYOUT_ABI allows us to notify users when the format of TMPDIR changes in
+# an incompatible way. Such changes should usually be detailed in the commit
+# that breaks the format and have been previously discussed on the mailing list
+# with general agreement from the core team.
+OELAYOUT_ABI = "15"
+
+# Miscellaneous settings
+#------------------------------------------------------------------------------
+# Some ptests (glibc, bash, python3) depend
+# on other locales to be included
+GLIBC_GENERATE_LOCALES = " \
+    de_DE.UTF-8 \
+    el_GR.UTF-8 \
+    en_GB.UTF-8 \
+    es_ES.UTF-8 \
+    fa_IR.UTF-8 \
+    fr_FR.ISO-8859-1 \
+    fr_FR.UTF-8 \
+    hr_HR.UTF-8 \
+    ja_JP.EUC-JP \
+    lt_LT.UTF-8 \
+    pl_PL.UTF-8 \
+    pl_PL.ISO-8859-2 \
+    ru_RU.UTF-8 \
+    tr_TR.UTF-8 \
+    tr_TR.ISO-8859-9 \
+    zh_HK.BIG5-HKSCS \
+"
+GLIBC_GENERATE_LOCALES_TO_BE_REMOVED = " \
+    en_US.UTF-8 \
+    pt_PT.UTF-8 \
+    pt_BR.UTF-8 \
+    fi_FI.UTF-8 \
+    it_IT.UTF-8 \
+    nl_NL.UTF-8 \
+    nb_NO.UTF-8 \
+    nn_NO.UTF-8 \
+    sv_SE.UTF-8 \
+"
+
+# License settings
+#------------------------------------------------------------------------------
+LICENSE_FLAGS_ACCEPTED += "commercial non-commercial"
+
