--- a/meta-ams/conf/distro/ams.conf
+++ b/meta-ams/conf/distro/ams.conf
@@ -1,3 +1,12 @@
+# Enforced inherits
+#------------------------------------------------------------------------------
+INHERIT += "uninative"
+INHERIT += "reproducible_build"
+
+# QA check settings - a little stricter than the OE-Core defaults
+WARN_TO_ERROR_QA = "already-stripped compile-host-path install-host-path \
+                    installed-vs-shipped ldflags pn-overrides rpaths staticdev \
+                    unknown-configure-option useless-rpaths"
 
 require conf/distro/include/poky-copy.inc
 
