Enable meta-ams-bsp-phytecimx8 layer for kirkstone

--- a/meta-ams-bsp-phytecimx8/conf/layer.conf
+++ b/meta-ams-bsp-phytecimx8/conf/layer.conf
@@ -9,6 +9,6 @@ BBFILE_COLLECTIONS += "ams-bsp-phytecimx8"
 BBFILE_PATTERN_ams-bsp-phytecimx8 = "^${LAYERDIR}/"
 BBFILE_PRIORITY_ams-bsp-phytecimx8 = "30"
 LAYERVERSION_ams-bsp-phytecimx8 = "3"
-LAYERSERIES_COMPAT_ams-bsp-phytecimx8 = "dunfell gatesgarth hardknott"
+LAYERSERIES_COMPAT_ams-bsp-phytecimx8 = "kirkstone"
 
 LAYERDEPENDS_ams-bsp-phytecimx8 = "ams-bsp "
