--- a/meta-ams-bsp/conf/templates/stm32m1/local.conf.sample
+++ b/meta-ams-bsp/conf/templates/stm32m1/local.conf.sample
@@ -1,17 +1,9 @@
 # This sets the default machine to be qemux86 if no other machine is selected:
 MACHINE ??= "qemux86"
-MACHINE = "stm32mp15-disco"
-
-# Default policy config
+MACHINE ?= "stm32mp15-disco"
 #
-# The distribution setting controls which policy settings are used as defaults.
-# The default value is fine for general Yocto project use, at least initially.
-# Ultimately when creating custom policy, people will likely end up subclassing
-# these defaults.
-#
-# This sets the default distribution to be nodistro if no other distribution is selected:
-#DISTRO ??= "nodistro"
-DISTRO = "openstlinux-weston"
+# DISTRO ?= "openstlinux-weston"
+DISTRO = "ams-bsp"
 
 # SDK target architecture
 #
@@ -43,7 +35,6 @@ DISTRO = "openstlinux-weston"
 # There are other application targets that can be used here too, see
 # meta/classes/image.bbclass and meta/classes/core-image.bbclass for more details.
 # We default to enabling the debugging tweaks.
-EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
 
 #
 # Additional image features
@@ -105,7 +96,7 @@ PACKAGECONFIG:append:pn-nativesdk-qemu = " sdl"
 # CONF_VERSION is increased each time build/conf/ changes incompatibly and is used to
 # track the version of this file when it was generated. This can safely be ignored if
 # this doesn't mean anything to you.
-CONF_VERSION = "1"
+LCONF_VERSION = "7"
 
 GLIBC_GENERATE_LOCALES = "en_GB.UTF-8 en_US.UTF-8"
 IMAGE_LINGUAS ?= "en-gb"
