--- a/meta-ams-bsp/conf/distro/ams-bsp.conf
+++ b/meta-ams-bsp/conf/distro/ams-bsp.conf
@@ -103,31 +103,32 @@ GLIBC_GENERATE_LOCALES = " \
     de_DE.UTF-8 \
     el_GR.UTF-8 \
     en_GB.UTF-8 \
+    en_US.UTF-8 \
     es_ES.UTF-8 \
     fa_IR.UTF-8 \
+    fi_FI.UTF-8 \
     fr_FR.ISO-8859-1 \
     fr_FR.UTF-8 \
     hr_HR.UTF-8 \
+    it_IT.UTF-8 \
     ja_JP.EUC-JP \
     lt_LT.UTF-8 \
+    nb_NO.UTF-8 \
+    nl_NL.UTF-8 \
+    nn_NO.UTF-8 \
     pl_PL.UTF-8 \
     pl_PL.ISO-8859-2 \
+    pt_BR.UTF-8 \
+    pt_PT.UTF-8 \
     ru_RU.UTF-8 \
+    sv_SE.UTF-8 \
     tr_TR.UTF-8 \
     tr_TR.ISO-8859-9 \
     zh_HK.BIG5-HKSCS \
 "
-GLIBC_GENERATE_LOCALES_TO_BE_REMOVED = " \
-    en_US.UTF-8 \
-    pt_PT.UTF-8 \
-    pt_BR.UTF-8 \
-    fi_FI.UTF-8 \
-    it_IT.UTF-8 \
-    nl_NL.UTF-8 \
-    nb_NO.UTF-8 \
-    nn_NO.UTF-8 \
-    sv_SE.UTF-8 \
-"
+
+IMAGE_LINGUAS = "en-us"
+ENABLE_BINARY_LOCALE_GENERATION = "1"
 
 # License settings
 #------------------------------------------------------------------------------
