--- a/meta-ams-bsp/conf/templates/phyimx8/bblayers.conf.sample
+++ b/meta-ams-bsp/conf/templates/phyimx8/bblayers.conf.sample
@@ -1,3 +1,6 @@
+# Minimal set of layers needed to build a bsp-image-dev
+# for imx8mm polis board
+#
 # LCONF_VERSION is increased each time build/conf/bblayers.conf
 # changes incompatibly
 LCONF_VERSION = "7"
@@ -6,24 +9,18 @@ BBPATH = "${TOPDIR}"
 BBFILES ?= ""
 
 OEROOT := "/yocto/root/sources/poky"
-# add BSPDIR variable, as it is needed by recipes of NXP
 BSPDIR := "${OEROOT}/../.."
 
-# In our BSPs active layers are defined by the manifest.xml for all BSPs. The
-# bblayers.conf gets created by the init_bblayers.py script.
 BBLAYERS ?= ""
 BBLAYERS += "\
   ${OEROOT}/../poky/meta \
-  ${OEROOT}/../poky/meta-poky \
-  ${OEROOT}/../meta-openembedded/meta-oe \
-  ${OEROOT}/../meta-openembedded/meta-networking \
-  ${OEROOT}/../meta-openembedded/meta-python \
   ${OEROOT}/../meta-openembedded/meta-multimedia \
-  ${OEROOT}/../meta-openembedded/meta-filesystems \
-  ${OEROOT}/../meta-openembedded/meta-perl \
+  ${OEROOT}/../meta-openembedded/meta-networking \
+  ${OEROOT}/../meta-openembedded/meta-oe \
+  ${OEROOT}/../meta-openembedded/meta-python \
+  \
   ${OEROOT}/../meta-freescale \
   ${OEROOT}/../meta-imx/meta-bsp \
-  ${OEROOT}/../meta-imx/meta-ml \
   ${OEROOT}/../meta-phytec \
   \
   ${OEROOT}/../ams/meta-ams-bsp/ \
