--- a/meta-ams-bsp/conf/templates/phyimx8/local.conf.sample
+++ b/meta-ams-bsp/conf/templates/phyimx8/local.conf.sample
@@ -11,12 +11,6 @@ PATCHRESOLVE = "noop"
 # global configuration #
 ########################
 
-# enable bitbakes git shallow functionality: this reduces download volume
-# from 7.3G to 1.6 G as of sumo. If you need the git history of a project,
-# you can run a "git remote update" in the tmp dir, as the remotes are
-# correctly specified
-BB_GIT_SHALLOW = "1"
-
 # SDK will be build for that cpu
 SDKMACHINE ?= "x86_64"
 
@@ -26,18 +20,12 @@ BB_DISKMON_DIRS ??= "\
     STOPTASKS,${DL_DIR},1G,100K \
     STOPTASKS,${SSTATE_DIR},1G,100K \
     STOPTASKS,/tmp,100M,100K \
-    ABORT,${TMPDIR},100M,1K \
-    ABORT,${DL_DIR},100M,1K \
-    ABORT,${SSTATE_DIR},100M,1K \
-    ABORT,/tmp,10M,1K"
+    HALT,${TMPDIR},100M,1K \
+    HALT,${DL_DIR},100M,1K \
+    HALT,${SSTATE_DIR},100M,1K \
+    HALT,/tmp,10M,1K"
 
-# Fix the temp dir such that later rsync can refer to output
-# make sure custom glibc recipes do not overwrite TMPDIR
-TCLIBCAPPEND = ""
 TMPDIR = "${TOPDIR}/tmp-${DISTRO}"
-
-GLIBC_GENERATE_LOCALES ?= "en_US.UTF-8 de_DE.UTF-8"
-IMAGE_LINGUAS ?= "en-us de-de"
 
 BB_GENERATE_MIRROR_TARBALLS = "0"
 INHERIT += "rm_work"
@@ -45,36 +33,23 @@ INHERIT += "rm_work"
 # You can disable and enable FSTYPES as you wish. e.g. 'ext4'.
 # This variable is ordering dependend.
 IMAGE_FSTYPES = "tar.gz wic"
-
-# To change the variable for any imx8 machine:
 IMAGE_FSTYPES_mx8 = "tar.gz wic emmc"
+# IMAGE_FSTYPES:append = "${@bb.utils.contains("MACHINE_FEATURES", "emmc", " emmc ", "", d)}"
 
 # Turn on debugging options of the kernel
-#DEBUG_BUILD_pn-linux-mainline = "1"
+#DEBUG_BUILD:pn-linux-mainline = "1"
 # Turn on debugging options of the imx kernel
-#DEBUG_BUILD_pn-linux-imx = "1"
+#DEBUG_BUILD:pn-linux-imx = "1"
 # Turn on debugging options of the barebox
-#DEBUG_BUILD_pn-barebox = "1"
+#DEBUG_BUILD:pn-barebox = "1"
 
 # Include kernel sources in SDK
-# TOOLCHAIN_TARGET_TASK_append = " kernel-devsrc"
+# TOOLCHAIN_TARGET_TASK:append = " kernel-devsrc"
 
-# The default package class of the distro ampliphy is 'package_ipk'. The first
-# value is used as the package manager to build the image and sdk. To build
-# also tar packages use
 PACKAGE_CLASSES = "package_ipk "
 
-# Variable IMAGE_ROOTFS_EXTRA_SPACE from poky/meta/conf/documentation.conf:
-#   Defines additional free disk space created in the image in Kbytes. By
-#   default, this variable is set to '0'.
-# This example line adds an additional 512 MiB of free space to the root
-# filesystem:
+# Add an additional 512 MiB of free space to the root filesystem:
 IMAGE_ROOTFS_EXTRA_SPACE = "524288"
-
-# See http://www.yoctoproject.org/docs/1.8/ref-manual/ref-manual.html#ref-features-image
-#   "Through these variables, you can add several different predefined
-#    packages such as development utilities or packages with debug information
-#    needed to investigate application problems or profile applications
 
 # Uncomment to accept NXP EULA (needed, if any NXP / freescale layer is used)
 # EULA can then be found under ../sources/meta-freescale/EULA
