Rework machine carmen -> rpi4-cam

--- a/meta-ams-bsp-rpi/conf/machine/rpi4-cam.conf
+++ b/meta-ams-bsp-rpi/conf/machine/rpi4-cam.conf
@@ -1,7 +1,7 @@
 #@TYPE: Machine
-#@NAME: Board Configuration "ricardo"
+#@NAME: Board Configuration RaspberryPi4 with mpi-csi cam 
 #@COM: raspberrypi
-#@DESCRIPTION: Board Configuration "ricardo" (based on raspberrypi3, w/ console)
+#@DESCRIPTION: Board Configuration raspberrypi4, mipi-csi cam,  w/ console)
 #@MAINTAINER: Volker Kempert <volker.kempert@almedso.de>
 
 # see  https://readthedocs.org/projects/meta-raspberrypi/
@@ -14,7 +14,7 @@ MACHINE_FEATURES_remove = "keyboard screen touchscreen alsa sdio"
 # Enable the console (as serial0 in kernel cmdline.txt) and in config.txt
 ENABLE_UART = "1"
 
-IMAGE_FSTYPES += "wic"
+IMAGE_FSTYPES = "targ.gz wic"
 # WKS_FILE = "sdimage-bootpart.wks"
 # extra rootfs size in kbyte e.g. 4 GB here
 IMAGE_ROOTFS_EXTRA_SPACE = "4194304"
