Rework machine ruiz -> rpi3-touch-hmi

--- a/meta-ams-bsp-rpi/conf/machine/rpi3-touch-hmi.conf
+++ b/meta-ams-bsp-rpi/conf/machine/rpi3-touch-hmi.conf
@@ -1,9 +1,8 @@
 #@TYPE: Machine
-#@NAME: Board Configuration "ruiz"
+#@NAME: Board configuration rpi3-touch-hmi
 #@COM: raspberrypi
-#@DESCRIPTION: Board Configuration "ruiz" (based on raspberrypi3, w/ touch, display)
+#@DESCRIPTION: Board configuration  raspberrypi3, w/ touch, w/ display)
 #@MAINTAINER: Volker Kempert <volker.kempert@almedso.de>
-
 
 MACHINEOVERRIDES = "raspberrypi3:${MACHINE}"
 require conf/machine/raspberrypi3.conf
