Rework machine rodolfo -> rpi0-wifi-can

--- a/meta-ams-bsp-rpi/conf/machine/rpi0-wifi-can.conf
+++ b/meta-ams-bsp-rpi/conf/machine/rpi0-wifi-can.conf
@@ -1,5 +1,5 @@
 #@TYPE: Machine
-#@NAME: Board Configuration "rodolfo"
+#@NAME: Board Configuration rpi0-wifi-can
 #@COM: raspberrypi
 #@DESCRIPTION: Board Configuration "rodolfo" (based on raspberrypi0-wifi, w console)
 #@MAINTAINER: Volker Kempert <volker.kempert@almedso.de>
@@ -8,7 +8,8 @@
 MACHINEOVERRIDES = "raspberrypi0-wifi:${MACHINE}"
 require conf/machine/raspberrypi0-wifi.conf
 
-MACHINE_FEATURES_remove = "keyboard screen touchscreen alsa bluetooth sdio"
+MACHINE_FEATURES:remove = "keyboard screen touchscreen alsa bluetooth sdio"
+MACHINE_FEATURES:append = " can "
 
 # Enable the console (as serial0 in kernel cmdline.txt) and in config.txt
 ENABLE_UART = "1"
@@ -27,3 +28,4 @@ IMAGE_FSTYPES += "wic"
 # WKS_FILE = "sdimage-bootpart.wks"
 # extra rootfs size in kbyte e.g. 4GB = 4194304; 1GB = 1048576
 IMAGE_ROOTFS_EXTRA_SPACE = "1048576"
+
