Rework machine quirin -> qemux86-64-touch-display

--- a/meta-ams-bsp-rpi/conf/machine/qemux86-64-touch-display.conf
+++ b/meta-ams-bsp-rpi/conf/machine/qemux86-64-touch-display.conf
@@ -1,9 +1,8 @@
 #@TYPE: Machine
-#@NAME: Board Configuration "quirin"
+#@NAME: Board Configuration qemux86-64 with display hmi
 #@COM: qemux86
-#@DESCRIPTION: Board Configuration "quirin" (based on qemux86, display)
+#@DESCRIPTION: Board Configuration based on qemux86-64, display
 #@MAINTAINER: Volker Kempert <volker.kempert@almedso.de>
-
 
 MACHINEOVERRIDES = "qemux86-64:${MACHINE}"
 require conf/machine/qemux86-64.conf
