--- a/meta-ams-bsp-rpi/conf/machine/rpi3-cam.conf
+++ b/meta-ams-bsp-rpi/conf/machine/rpi3-cam.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
-#@NAME: Board Configuration "carmen
-#@DESCRIPTION: Board Configuration "carmen" (based on raspberrypi3, w/ high res camera driver)
+#@NAME: Board Configuration rpi3-cam
+#@DESCRIPTION: Board Configuration based on raspberrypi3, w/ high res camera driver
 #@MAINTAINER: Volker Kempert <volker.kempert@almedso.de>
 
 # see  https://readthedocs.org/projects/meta-raspberrypi/
@@ -27,11 +27,7 @@ RPI_EXTRA_CONFIG += "dtoverlay=spi0-1cs"
 
 KERNEL_MODULE_AUTOLOAD_rpi += "i2c-dev i2c-bcm2708"
 
-## can bus support
-# ENABLE_SPI_BUS = "1"
-# ENABLE_CAN = "1"
-# CAN_OSCILLATOR = "8000000"
-
 # video for linix driver support
 VIDEO_CAMERA = "1"
 RASPBERRYPI_CAMERA_V2 = "1"
+
