Rename machine rigoletto -> riotboard

--- a/meta-ams-bsp-rpi/conf/machine/riotboard.conf
+++ b/meta-ams-bsp-rpi/conf/machine/riotboard.conf
@@ -1,8 +1,8 @@
 #@TYPE: Machine
-#@NAME: Board Configuration "Rigoletto"
+#@NAME: Board Configuration riotboard
 #@SOC: i.MX6 Solo
 #@COM: riotboard
-#@DESCRIPTION: Machine configuration for Board Configuration "Rigoletto" (based on riotboard)
+#@DESCRIPTION: Machine configuration for Board Configuration riotboard
 
 # derived from riotboard
 include conf/machine/imx6dl-riotboard.conf
