--- a/meta-ams/conf/templates/default/bblayers.conf.sample
+++ b/meta-ams/conf/templates/default/bblayers.conf.sample
@@ -1,48 +1,46 @@
 # LCONF_VERSION is increased each time build/conf/bblayers.conf
 # changes incompatibly
-LCONF_VERSION = "3"
+LCONF_VERSION = "7"
 
 BBPATH = "${TOPDIR}"
 BSPDIR := "${@os.path.abspath(os.path.dirname(d.getVar('FILE', True)) + '/../..')}"
 
 BBFILES ?= ""
 BBLAYERS = " \
-   \
-  ${BSPDIR}/sources/poky/meta-poky \
-  ${BSPDIR}/sources/poky/meta-yocto-bsp \
   ${BSPDIR}/sources/poky/meta \
+  ${BSPDIR}/sources/poky/meta-yocto-bsp \
   \
+  ${BSPDIR}/sources/meta-openembedded/meta-filesystems \
+  ${BSPDIR}/sources/meta-openembedded/meta-multimedia \
+  ${BSPDIR}/sources/meta-openembedded/meta-networking \
   ${BSPDIR}/sources/meta-openembedded/meta-oe \
   ${BSPDIR}/sources/meta-openembedded/meta-python \
-  ${BSPDIR}/sources/meta-openembedded/meta-filesystems \
-  ${BSPDIR}/sources/meta-openembedded/meta-networking \
-  ${BSPDIR}/sources/meta-openembedded/meta-multimedia \
   ${BSPDIR}/sources/meta-openembedded/meta-webserver \
   \
   ${BSPDIR}/sources/meta-raspberrypi \
-  ${BSPDIR}/sources/meta-imx/meta-bsp \
-  ${BSPDIR}/sources/meta-imx/meta-sdk \
-  ${BSPDIR}/sources/meta-imx/meta-ml \
-  ${BSPDIR}/sources/meta-freescale \
-  ${BSPDIR}/sources/meta-freescale-3rdparty \
-  ${BSPDIR}/sources/meta-freescale-distro \
-  ${BSPDIR}/sources/meta-rauc \
-  ${BSPDIR}/sources/meta-phytec \
   \
   ${BSPDIR}/sources/meta-rust \
   \
   ${BSPDIR}/sources/ams/meta-ams \
-  ${BSPDIR}/sources/ams/meta-ams-bsp \
+  ${BSPDIR}/sources/ams/meta-ams-bsp-rpi \
 "
 
 # core layer same as openembedded-core/meta
-excluded = " \
-  ${BSPDIR}/sources/poky/meta \
-  ${BSPDIR}/sources/meta-freescale \
-  ${BSPDIR}/sources/meta-freescale-3rdparty \
-  ${BSPDIR}/sources/meta-freescale-distro \
+EXCLUDED_LAYERS = " \
+  ${BSPDIR}/sources/poky/meta-poky \
   \
   ${BSPDIR}/sources/meta-qt6 \
   ${BSPDIR}/sources/meta-jupyter \
   ${BSPDIR}/sources/meta-scipy \
+  \
+  ${BSPDIR}/sources/ams/meta-ams-bsp \
+  \
+  ${BSPDIR}/sources/meta-imx/meta-bsp \
+  ${BSPDIR}/sources/meta-imx/meta-sdk \
+  ${BSPDIR}/sources/meta-imx/meta-ml \
+  ${BSPDIR}/sources/meta-freescale \
+  ${BSPDIR}/sources/meta-rauc \
+  ${BSPDIR}/sources/meta-phytec \
 "
+
+
