--- a/meta-ams-bsp/conf/templates/stm32m1/bblayers.conf.sample
+++ b/meta-ams-bsp/conf/templates/stm32m1/bblayers.conf.sample
@@ -1,6 +1,6 @@
 # LAYER_CONF_VERSION is increased each time build/conf/bbsources.conf
 # changes incompatibly
-LCONF_VERSION = "7"
+# LCONF_VERSION = "7"
 
 BBPATH = "${TOPDIR}"
 BBFILES ?= ""
@@ -29,6 +29,7 @@ BASELAYERS ?= " \
     ${OEROOT}/sources/meta-openembedded/meta-webserver \
     ${OEROOT}/sources/meta-openembedded/meta-filesystems \
     ${OEROOT}/sources/meta-openembedded/meta-perl \
+    ${OEROOT}/sources/meta-openembedded/meta-oe \
 "
 
 BBLAYERS_NON_REMOVABLE ?= " \
@@ -39,6 +40,12 @@ BSPLAYER ?= " \
     ${@'${OEROOT}/sources/meta-st/meta-st-cannes2' if os.path.isfile('${OEROOT}/sources/meta-st/meta-st-cannes2/conf/layer.conf') else ''} \
     ${@'${OEROOT}/sources/meta-st/meta-st-stm32mp' if os.path.isfile('${OEROOT}/sources/meta-st/meta-st-stm32mp/conf/layer.conf') else ''} \
     "
+
+ADDONSLAYERS = ""
+# linaro
+ADDONSLAYERS += "${@'${OEROOT}/sources/meta-linaro/meta-linaro' if os.path.isfile('${OEROOT}/sources/meta-linaro/meta-linaro/conf/layer.conf') else ''}"
+ADDONSLAYERS += "${@'${OEROOT}/sources/meta-linaro/meta-linaro-toolchain' if os.path.isfile('${OEROOT}/sources/meta-linaro/meta-linaro-toolchain/conf/layer.conf') else ''}"
+ADDONSLAYERS += "${@'${OEROOT}/sources/meta-openembedded/meta-networking' if os.path.isfile('${OEROOT}/sources/meta-linaro/meta-linaro/conf/layer.conf') else ''}"
 
 # Qt5
 ADDONSLAYERS += "${@'${OEROOT}/sources/meta-qt5' if os.path.isfile('${OEROOT}/sources/meta-qt5/conf/layer.conf') else ''}"
@@ -53,20 +60,16 @@ ADDONSLAYERS += " \
 # specific to framework
 FRAMEWORKLAYERS += "${@'${OEROOT}/sources/meta-st/meta-st-openstlinux' if os.path.isfile('${OEROOT}/sources/meta-st/meta-st-openstlinux/conf/layer.conf') else ''}"
 
-
-AMSLAYERS = " \
-	${OEROOT}/sources/ams/meta-ams-bsp \
-"
 # add BSP layer
 BBLAYERS += " \
-    ${OPENEMBEDDED} \
     ${BASELAYERS} \
     ${BSPLAYER} \
     ${ADDONSLAYERS} \
     ${FRAMEWORKLAYERS} \
-	${AMSLAYERS} \
+    ${@'${OPENEMBEDDED}' if os.path.isfile('${OEROOT}/sources/openembedded-core/meta/conf/layer.conf') else '${POKY}'} \
     "
-
 # BSP dependencies"
-BBLAYERS =+ "${OEROOT}/sources/meta-openembedded/meta-oe"
 BBLAYERS =+ "${OEROOT}/sources/meta-openembedded/meta-python"
+
+# Ams bsp layer
+BBLAYERS =+ "${OEROOT}/sources/ams/meta-ams-bsp"
