--- a/meta-ams-bsp/conf/templates/stm32m1/local.conf.sample
+++ b/meta-ams-bsp/conf/templates/stm32m1/local.conf.sample
@@ -1,75 +1,29 @@
-# This sets the default machine to be qemux86 if no other machine is selected:
+# !!!! does not flash yet.
+# initrd + resize is not build :-(
+# however, stm32m1-unintegrated with distro = openstlinux-weston works
+#
+YOCTO_VERSION ?= "kirkstone"
+
 MACHINE ??= "qemux86"
+# It is important to use the ?= operator to be free changing the machine at command line
+# STM32MP157F-DK1 or STM32MP157F-DK2
 MACHINE ?= "stm32mp15-disco"
-YOCTO_VERSION = "kirkstone"
-#
+
+DISTRO ??= "nodistro"
 # DISTRO ?= "openstlinux-weston"
-DISTRO = "ams-bsp"
+# It is important to use the ?= operator to be free changing the distro at command line
+DISTRO ?= "ams-bsp"
 
-# SDK target architecture
-#
-# This variable specifies the architecture to build SDK items for and means
-# you can build the SDK packages for architectures other than the machine you are
-# running the build on (i.e. building i686 packages on an x86_64 host).
-# Supported values are i686 and x86_64
-#SDKMACHINE ?= "i686"
+PACKAGE_CLASSES ?= "package_ipk"
 
-#
-# Extra image configuration defaults
-#
-# The EXTRA_IMAGE_FEATURES variable allows extra packages to be added to the generated
-# images. Some of these options are added to certain image types automatically. The
-# variable can contain the following options:
-#  "dbg-pkgs"       - add -dbg packages for all installed packages
-#                     (adds symbol information for debugging/profiling)
-#  "dev-pkgs"       - add -dev packages for all installed packages
-#                     (useful if you want to develop against libs in the image)
-#  "ptest-pkgs"     - add -ptest packages for all ptest-enabled packages
-#                     (useful if you want to run the package test suites)
-#  "tools-sdk"      - add development tools (gcc, make, pkgconfig etc.)
-#  "tools-debug"    - add debugging tools (gdb, strace)
-#  "eclipse-debug"  - add Eclipse remote debugging support
-#  "tools-profile"  - add profiling tools (oprofile, lttng, valgrind)
-#  "tools-testapps" - add useful testing tools (ts_print, aplay, arecord etc.)
-#  "debug-tweaks"   - make an image suitable for development
-#                     e.g. ssh root access has a blank password
-# There are other application targets that can be used here too, see
-# meta/classes/image.bbclass and meta/classes/core-image.bbclass for more details.
-# We default to enabling the debugging tweaks.
+# taken over
+EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
 
-#
-# Additional image features
-#
-# The following is a list of additional classes to use when building images which
-# enable extra features. Some available options which can be included in this variable
-# are:
-#   - 'buildstats' collect build statistics
-#   - 'image-mklibs' to reduce shared library files size for an image
-#   - 'image-prelink' in order to prelink the filesystem image
-# NOTE: if listing mklibs & prelink both, then make sure mklibs is before prelink
-# NOTE: mklibs also needs to be explicitly enabled for a given image, see local.conf.extended
-# USER_CLASSES ?= "buildstats image-mklibs image-prelink"
+USER_CLASSES ?= "buildstats"
 
+# By default disable interactive patch resolution (tasks will just fail instead):
+PATCHRESOLVE = "noop"
 
-# Runtime testing of images
-#
-# The build system can test booting virtual machine images under qemu (an emulator)
-# after any root filesystems are created and run tests against those images. It can also
-# run tests against any SDK that are built. To enable this uncomment these lines.
-# See classes/test{image,sdk}.bbclass for further details.
-#IMAGE_CLASSES += "testimage testsdk"
-#TESTIMAGE_AUTO_qemuall = "1"
-
-#
-# Disk Space Monitoring during the build
-#
-# Monitor the disk space during the build. If there is less that 1GB of space or less
-# than 100K inodes in any key build location (TMPDIR, DL_DIR, SSTATE_DIR), gracefully
-# shutdown the build. If there is less that 100MB or 1K inodes, perform a hard abort
-# of the build. The reason for this is that running completely out of space can corrupt
-# files and damages the build in ways which may not be easily recoverable.
-# It's necesary to monitor /tmp, if there is no space left the build will fail
-# with very exotic errors.
 BB_DISKMON_DIRS ??= "\
     STOPTASKS,${TMPDIR},1G,100K \
     STOPTASKS,${DL_DIR},1G,100K \
@@ -81,28 +35,16 @@ BB_DISKMON_DIRS ??= "\
     HALT,/tmp,10M,1K"
 
 # overwrite in site.conf
-DL_DIR ?= "${TOPDIR}/downloads-cache/"
+DL_DIR ?= "${TOPDIR}/download-cache/"
 SSTATE_DIR ?= "${TOPDIR}/sstate-cache/${DISTRO}"
 
-# Qemu configuration
-#
-# By default qemu will build with a builtin VNC server where graphical output can be
-# seen. The two lines below enable the SDL backend too. By default libsdl2-native will
-# be built, if you want to use your host's libSDL instead of the minimal libsdl built
-# by libsdl2-native then uncomment the ASSUME_PROVIDED line below.
-PACKAGECONFIG:append:pn-qemu-native = " sdl"
-PACKAGECONFIG:append:pn-nativesdk-qemu = " sdl"
-#ASSUME_PROVIDED += "libsdl2-native"
+# Write additional build variables at startup
+BUILDCFG_VARS += " DL_DIR SSTATE_DIR "
 
 # =========================================================================
 #   ST SPecific
 # =========================================================================
 #
-# CONF_VERSION is increased each time build/conf/ changes incompatibly and is used to
-# track the version of this file when it was generated. This can safely be ignored if
-# this doesn't mean anything to you.
-LCONF_VERSION = "7"
-
 GLIBC_GENERATE_LOCALES = "en_GB.UTF-8 en_US.UTF-8"
 IMAGE_LINGUAS ?= "en-gb"
 
@@ -118,10 +60,19 @@ INHERIT += "devshell"
 # Remove the old image before the new one generated to save disk space
 RM_OLD_IMAGE = "1"
 
+# Nice debug data
+INHERIT += "buildhistory"
+BUILDHISTORY_COMMIT = "1"
+
 # Clean up working directory after build
 INHERIT += "rm_work"
 
-PACKAGE_CLASSES = "package_ipk"
+# To enable archiver for recipes that are configured
+#ST_ARCHIVER_ENABLE = "1"
+
+# Setup environment for builds binary reproducibility
+# REPRODUCIBLE_TIMESTAMP_ROOTFS = ""
+# INHERIT += "reproducible_build"
 
 # Setup eSDK
 SDK_EXT_TYPE="minimal"
@@ -129,17 +80,20 @@ SDK_INCLUDE_TOOLCHAIN="1"
 
 # Enable PR server to avoid version-going-backward issue
 PRSERV_HOST = "localhost:0"
-
-# =========================================================================
-# Configure STM32MP default version to github
-# =========================================================================
-#STM32MP_SOURCE_SELECTION_pn-linux-stm32mp = "github"
-#STM32MP_SOURCE_SELECTION_pn-optee-os-stm32mp = "github"
-#STM32MP_SOURCE_SELECTION_pn-tf-a-stm32mp = "github"
-#STM32MP_SOURCE_SELECTION_pn-u-boot-stm32mp = "github"
+#------------------------------------------------------------------------------
+# Take over from openstlinux distro
+#------------------------------------------------------------------------------
+# add support of InitRD installation package
+DISTRO_FEATURES:append = " initrd "
+# add support of autoresize through InitRD
+DISTRO_FEATURES:append = " autoresize "
+# INITRD addons to image
+DISTRO_EXTRA_RRECOMMENDS:append = " ${@bb.utils.contains('COMBINED_FEATURES', 'initrd', '${INITRD_PACKAGE}', '', d)} "
+# Configure InitRD image installation package
+INITRD_PACKAGE = "st-initrd"
+# Init default InitRD image to ST resize image
 
 # =========================================================================
 # Set EULA acceptance
 # =========================================================================
 ACCEPT_EULA_stm32mp15-disco = "1"
-
