Disable TMPDIR distro dependency for default template

--- a/meta-ams/conf/templates/default/local.conf.sample
+++ b/meta-ams/conf/templates/default/local.conf.sample
@@ -34,8 +34,8 @@ SSTATE_DIR ?= "${TOPDIR}/sstate-cache/${DISTRO}"
 
 # Fix the temp dir such that later rsync can refer to output
 # make sure custom glibc recipes do not overwrite TMPDIR
-TCLIBCAPPEND = ""
-TMPDIR = "${TOPDIR}/tmp-${DISTRO}"
+# TCLIBCAPPEND = ""
+# TMPDIR = "${TOPDIR}/tmp-${DISTRO}"
 
 GLIBC_GENERATE_LOCALES ?= "en_US.UTF-8 de_DE.UTF-8"
 IMAGE_LINGUAS ?= "en-us de-de"
