Adjust ams-bsp-rpi layer compatibility

--- a/meta-ams-bsp-rpi/conf/layer.conf
+++ b/meta-ams-bsp-rpi/conf/layer.conf
@@ -9,6 +9,6 @@ BBFILE_COLLECTIONS += "amsbsprpi"
 BBFILE_PATTERN_amsbsprpi = "^${LAYERDIR}/"
 BBFILE_PRIORITY_amsbsprpi = "6"
 LAYERVERSION_amsbsprpi = "2"
-LAYERSERIES_COMPAT_amsbsprpi = "dunfell gatesgarth hardknott"
+LAYERSERIES_COMPAT_amsbsprpi = "kirkstone langdale"
 
-LAYERDEPENDS_amsbsprpi = "amsbsp raspberrypi"
+LAYERDEPENDS_amsbsprpi = "raspberrypi"
