Adjust ams distro to make images build

--- a/meta-ams/conf/distro/ams.conf
+++ b/meta-ams/conf/distro/ams.conf
@@ -1,14 +1,14 @@
 # Enforced inherits
 #------------------------------------------------------------------------------
-INHERIT += "uninative"
-INHERIT += "reproducible_build"
+# INHERIT += "uninative"
+# INHERIT += "reproducible_build"
 
 # QA check settings - a little stricter than the OE-Core defaults
 WARN_TO_ERROR_QA = "already-stripped compile-host-path install-host-path \
                     installed-vs-shipped ldflags pn-overrides rpaths staticdev \
                     unknown-configure-option useless-rpaths"
 
-require conf/distro/include/poky-copy.inc
+# require conf/distro/include/poky-copy.inc
 
 DISTRO = "ams"
 DISTRO_NAME = "AMS Distribution"
@@ -16,6 +16,7 @@ DISTRO_VERSION = "2020-Q3"
 
 BUILD_VARIANT = "prod"
 TARGET_VENDOR = "-ams"
+LICENSE_FLAGS_ACCEPTED += "commercial non-commercial synaptics-killswitch"
 
 OPKG_ARGS:remove = "--prefer-arch-to-version"
 
@@ -50,7 +51,6 @@ PACKAGE_FEED_URIS ?= "http://ams.almedso.de/feeds"
 ENTERPRISE_DISTRO = "1"
 
 SANITY_TESTED_DISTROS = " \
-  ubuntu-18.04 \n \
   ubuntu-20.04 \n \
   "
 
