--- a/meta-ams/conf/templates/default/local.conf.sample
+++ b/meta-ams/conf/templates/default/local.conf.sample
@@ -1,10 +1,10 @@
-CONF_VERSION = "1"
+# CONF_VERSION = "2"
 DISTRO ?= "ams"
 YOCTO_VERSION = "kirkstone"
 
 PACKAGE_CLASSES ?= "package_ipk"
 
-USER_CLASSES ?= "buildstats image-mklibs image-prelink"
+USER_CLASSES ?= "buildstats"
 PATCHRESOLVE = "noop"
 
 BB_DISKMON_DIRS ??= "\
