Relocate qemux86-64-touch-display machine

--- a/meta-ams-bsp/conf/machine/qemux86-64-touch-display.conf
+++ b/meta-ams-bsp/conf/machine/qemux86-64-touch-display.conf
@@ -7,7 +7,7 @@
 MACHINEOVERRIDES = "qemux86-64:${MACHINE}"
 require conf/machine/qemux86-64.conf
 
-KMACHINE_quirin = "qemux86-64"
+KMACHINE:qemux86-64-touch-display = "qemux86-64"
 
 CORE_IMAGE_EXTRA_INSTALL += "wayland weston"
 
