--- a/meta-ams-bsp-phytecimx8/conf/templates/phyimx8/local.conf.sample
+++ b/meta-ams-bsp-phytecimx8/conf/templates/phyimx8/local.conf.sample
@@ -93,3 +93,7 @@ EXTRA_IMAGE_FEATURES = ""
 # EULA can then be found under ../sources/meta-freescale/EULA
 ACCEPT_FSL_EULA = "1"
 
+
+# Show cache directories at start of bitbake
+BUILDCFG_VARS += " DL_DIR SSTATE_DIR "
+
