--- a/meta-ams-bsp/conf/templates/stm32m1/local.conf.sample
+++ b/meta-ams-bsp/conf/templates/stm32m1/local.conf.sample
@@ -97,3 +97,7 @@ INITRD_PACKAGE = "st-initrd"
 # Set EULA acceptance
 # =========================================================================
 ACCEPT_EULA_stm32mp15-disco = "1"
+
+# Show cache directories at start of bitbake
+BUILDCFG_VARS += " DL_DIR SSTATE_DIR "
+
