--- a/meta-ams-bsp-phytecimx8/conf/templates/phyimx8/local.conf.sample
+++ b/meta-ams-bsp-phytecimx8/conf/templates/phyimx8/local.conf.sample
@@ -30,10 +30,10 @@ BB_DISKMON_DIRS ??= "\
     STOPTASKS,${DL_DIR},1G,100K \
     STOPTASKS,${SSTATE_DIR},1G,100K \
     STOPTASKS,/tmp,100M,100K \
-    ABORT,${TMPDIR},100M,1K \
-    ABORT,${DL_DIR},100M,1K \
-    ABORT,${SSTATE_DIR},100M,1K \
-    ABORT,/tmp,10M,1K"
+    HALT,${TMPDIR},100M,1K \
+    HALT,${DL_DIR},100M,1K \
+    HALT,${SSTATE_DIR},100M,1K \
+    HALT,/tmp,10M,1K"
 
 # Fix the temp dir such that later rsync can refer to output
 # make sure custom glibc recipes do not overwrite TMPDIR
