Fix rpi4-cam includes machine definition

--- a/meta-ams-bsp-rpi/conf/machine/rpi4-cam.conf
+++ b/meta-ams-bsp-rpi/conf/machine/rpi4-cam.conf
@@ -7,9 +7,9 @@
 # see  https://readthedocs.org/projects/meta-raspberrypi/
 
 MACHINEOVERRIDES = "raspberrypi4:${MACHINE}"
-require conf/machine/raspberrypi3.conf
+require conf/machine/raspberrypi4.conf
 
-MACHINE_FEATURES_remove = "keyboard screen touchscreen alsa sdio"
+MACHINE_FEATURES:remove = "keyboard screen touchscreen alsa sdio"
 
 # Enable the console (as serial0 in kernel cmdline.txt) and in config.txt
 ENABLE_UART = "1"
