--- a/meta-ams-bsp-rpi/conf/machine/rpi3-cam.conf
+++ b/meta-ams-bsp-rpi/conf/machine/rpi3-cam.conf
@@ -4,6 +4,10 @@
 #@MAINTAINER: Volker Kempert <volker.kempert@almedso.de>
 
 # see  https://readthedocs.org/projects/meta-raspberrypi/
+# explorer: https://joy-it.net/de/products/RB-Explorer700
+# camera v2: https://randomnerdtutorials.com/guide-to-raspberry-pi-camera-v2-module/
+# camera ref.1.3: https://uk.pi-supply.com/products/raspberry-pi-camera-board-v1-3-5mp-1080p
+#                 https://circuit.rocks/raspberry-pi-camera.html
 
 MACHINEOVERRIDES = "raspberrypi3:${MACHINE}"
 require conf/machine/raspberrypi3.conf
@@ -22,7 +26,6 @@ SPLASH = ""
 
 ENABLE_SPI_BUS = "1"
 ENABLE_I2C = "1"
-RPI_EXTRA_CONFIG = "dtoverlay=pi3-disable-bt"
 RPI_EXTRA_CONFIG += "dtoverlay=spi0-1cs"
 
 KERNEL_MODULE_AUTOLOAD_rpi += "i2c-dev i2c-bcm2708"
