Update rpi2-2in7epaper (machineoverrides)

--- a/meta-ams-bsp-rpi/conf/machine/rpi2-2in7epaper.conf
+++ b/meta-ams-bsp-rpi/conf/machine/rpi2-2in7epaper.conf
@@ -9,8 +9,19 @@
 # - https://www.waveshare.com/wiki/2.7inch_e-Paper_HAT_Manual#Working_With_Raspberry_Pi
 # - demo/dirver: https://github.com/waveshare/e-Paper
 
-MACHINEOVERRIDES = "raspberrypi2:${MACHINE}"
-require conf/machine/raspberrypi2.conf
+DEFAULTTUNE ?= "cortexa7thf-neon-vfpv4"
+
+require conf/machine/include/arm/armv7a/tune-cortexa7.inc
+include conf/machine/include/rpi-base.inc
+
+SDIMG_KERNELIMAGE ?= "kernel7.img"
+SERIAL_CONSOLES ?= "115200;ttyAMA0"
+UBOOT_MACHINE = "rpi_2_config"
+
+ARMSTUB ?= "armstub7.bin"
+
+# prepend raspberry 2 to make sure the kernel is correctly build
+MACHINEOVERRIDES =."raspberrypi2:"
 
 MACHINE_FEATURES:remove = "keyboard screen touchscreen alsa sdio"
 
@@ -18,7 +29,6 @@ MACHINE_FEATURES:remove = "keyboard screen touchscreen alsa sdio"
 ENABLE_UART = "1"
 
 IMAGE_FSTYPES += "wic"
-# WKS_FILE = "sdimage-bootpart.wks"
 # extra rootfs size in kbyte e.g. 4 GB here
 IMAGE_ROOTFS_EXTRA_SPACE = "4194304"
 
@@ -28,5 +38,5 @@ ENABLE_SPI_BUS = "1"
 ENABLE_I2C = "1"
 RPI_EXTRA_CONFIG += "dtoverlay=spi0-1cs"
 
-KERNEL_MODULE_AUTOLOAD_rpi += "i2c-dev i2c-bcm2708"
+KERNEL_MODULE_AUTOLOAD:rpi += "i2c-dev i2c-bcm2708"
 
