Update rpi3-expl700+cam machine (overrides)

--- a/meta-ams-bsp-rpi/conf/machine/rpi3-expl700+cam.conf
+++ b/meta-ams-bsp-rpi/conf/machine/rpi3-expl700+cam.conf
@@ -1,12 +1,30 @@
 #@TYPE: Machine
-#@NAME: Board Configuration rpi3-cam
-#@DESCRIPTION: Board Configuration based on raspberrypi3, w/ high res camera driver
+#@NAME: Board Configuration rpi3-expl700+coam
+#@DESCRIPTION: Board Configuration based on raspberrypi3, with explorer700 shield and  camera ref 1.3.
 #@MAINTAINER: Volker Kempert <volker.kempert@almedso.de>
-
 # see  https://readthedocs.org/projects/meta-raspberrypi/
 
-MACHINEOVERRIDES = "raspberrypi3:${MACHINE}"
-require conf/machine/raspberrypi3.conf
+
+DEFAULTTUNE ?= "cortexa7thf-neon-vfpv4"
+require conf/machine/include/arm/armv7a/tune-cortexa7.inc
+include conf/machine/include/rpi-base.inc
+
+MACHINE_EXTRA_RRECOMMENDS += "\
+    linux-firmware-rpidistro-bcm43430 \
+    linux-firmware-rpidistro-bcm43455 \
+    bluez-firmware-rpidistro-bcm43430a1-hcd \
+    bluez-firmware-rpidistro-bcm4345c0-hcd \
+"
+
+SDIMG_KERNELIMAGE ?= "kernel7.img"
+UBOOT_MACHINE = "rpi_3_32b_config"
+SERIAL_CONSOLES ?= "115200;ttyS0"
+
+VC4DTBO ?= "vc4-fkms-v3d"
+ARMSTUB ?= "armstub7.bin"
+
+    # make sure the raspberrypi 3 (w/o 64 bit) kernel adaptation is foun
+MACHINEOVERRIDES =. "raspberrypi3:"
 
 MACHINE_FEATURES:remove = "keyboard screen touchscreen alsa sdio"
 
