Adjust rpi machine configuration
Thus, all of them are booting after this change

--- a/meta-ams-bsp-rpi/conf/machine/rpi0-wifi-can.conf
+++ b/meta-ams-bsp-rpi/conf/machine/rpi0-wifi-can.conf
@@ -29,3 +29,8 @@ IMAGE_FSTYPES += "wic"
 # extra rootfs size in kbyte e.g. 4GB = 4194304; 1GB = 1048576
 IMAGE_ROOTFS_EXTRA_SPACE = "1048576"
 
+KERNEL_DEVICETREE = " \
+    bcm2708-rpi-zero-w.dtb \
+    overlays/mcp2515-can0.dtbo \
+    overlays/mcp2515-can1.dtbo \
+    "
