--- a/meta-ams-bsp-rpi/conf/machine/rpi2-2in7epaper.conf
+++ b/meta-ams-bsp-rpi/conf/machine/rpi2-2in7epaper.conf
@@ -40,3 +40,7 @@ RPI_EXTRA_CONFIG += "dtoverlay=spi0-1cs"
 
 KERNEL_MODULE_AUTOLOAD:rpi += "i2c-dev i2c-bcm2708"
 
+KERNEL_DEVICETREE = " \
+    bcm2710-rpi-2-b.dtb \
+    "
+
