--- a/meta-ams-bsp-rpi/conf/machine/rpi3-touch-hmi.conf
+++ b/meta-ams-bsp-rpi/conf/machine/rpi3-touch-hmi.conf
@@ -26,3 +26,7 @@ SPLASH = "psplash-ams"
 # Touch screen setting
 WAVESHARE_800X480_RPI = "1"
 MACHINE_FEATURES += "ads7846-touch"
+
+KERNEL_DEVICETREE = " \
+    bcm2710-rpi-3-b.dtb \
+    "
