Update rpi machines
- rpi3-cam is rpi4-cam only
- rpi3-touch-hmi boots now

--- a/meta-ams-bsp-rpi/conf/machine/rpi3-touch-hmi.conf
+++ b/meta-ams-bsp-rpi/conf/machine/rpi3-touch-hmi.conf
@@ -30,3 +30,15 @@ MACHINE_FEATURES += "ads7846-touch"
 KERNEL_DEVICETREE = " \
     bcm2710-rpi-3-b.dtb \
     "
+
+dtoverlay=""
+ENABLE_UART = "1"
+ENABLE_KGBD = "1"
+ENABLE_I2C = "1"
+
+
+KERNEL_MODULE_AUTOLOAD:rpi += "i2c-dev i2c-bcm2708"
+
+MACHINE_EXTRA_RRECOMMENDS += " rpi-config"
+
+RPI_USE_U_BOOT = "1"
