--- a/meta-ams-bsp-rpi/conf/machine/rpi3-2in7epaper.conf
+++ b/meta-ams-bsp-rpi/conf/machine/rpi3-2in7epaper.conf
@@ -1,13 +1,10 @@
 #@TYPE: Machine
 #@NAME: Board Configuration rpi3-cam
-#@DESCRIPTION: Board Configuration based on raspberrypi3, w/ high res camera driver
+#@DESCRIPTION: Board Configuration based on raspberrypi3
 #@MAINTAINER: Volker Kempert <volker.kempert@almedso.de>
 
 # see  https://readthedocs.org/projects/meta-raspberrypi/
 # explorer: https://joy-it.net/de/products/RB-Explorer700
-# camera v2: https://randomnerdtutorials.com/guide-to-raspberry-pi-camera-v2-module/
-# camera ref.1.3: https://uk.pi-supply.com/products/raspberry-pi-camera-board-v1-3-5mp-1080p
-#                 https://circuit.rocks/raspberry-pi-camera.html
 
 MACHINEOVERRIDES = "raspberrypi3:${MACHINE}"
 require conf/machine/raspberrypi3.conf
@@ -31,6 +28,4 @@ RPI_EXTRA_CONFIG += "dtoverlay=spi0-1cs"
 KERNEL_MODULE_AUTOLOAD_rpi += "i2c-dev i2c-bcm2708"
 
 # video for linix driver support
-VIDEO_CAMERA = "1"
-RASPBERRYPI_CAMERA_V2 = "1"
 
