--- a/meta-ams-bsp-rpi/conf/machine/rpi4-cam.conf
+++ b/meta-ams-bsp-rpi/conf/machine/rpi4-cam.conf
@@ -11,26 +11,16 @@ require conf/machine/raspberrypi4.conf
 
 MACHINE_FEATURES:remove = "keyboard screen touchscreen alsa sdio"
 
-# Enable the console (as serial0 in kernel cmdline.txt) and in config.txt
-ENABLE_UART = "1"
-
-IMAGE_FSTYPES = "targ.gz wic"
-# WKS_FILE = "sdimage-bootpart.wks"
+IMAGE_FSTYPES = "wic"
 # extra rootfs size in kbyte e.g. 4 GB here
-IMAGE_ROOTFS_EXTRA_SPACE = "4194304"
+# IMAGE_ROOTFS_EXTRA_SPACE = "4194304"
 
 SPLASH = ""
-
-# ENABLE_SPI_BUS = "1"
-# ENABLE_I2C = "1"
-
-# KERNEL_MODULE_AUTOLOAD_rpi += "i2c-dev i2c-bcm2708"
-
-# # can bus support
-# ENABLE_SPI_BUS = "1"
-# ENABLE_CAN = "1"
-# CAN_OSCILLATOR = "8000000"
 
 # video for linix driver support
 VIDEO_CAMERA = "1"
 RASPBERRYPI_CAMERA_HQ = "1"
+
+MACHINE_EXTRA_RRECOMMENDS += " rpi-config"
+
+# RPI_USE_U_BOOT = "1"
