--- a/meta-ams-bsp/conf/templates/stm32mp1-not-integrated/bblayers.conf.sample
+++ b/meta-ams-bsp/conf/templates/stm32mp1-not-integrated/bblayers.conf.sample
@@ -1,6 +1,6 @@
-# LAYER_CONF_VERSION is increased each time build/conf/bbsources.conf
+# LAYER_CONF_VERSION is increased each time build/conf/bblayers.conf
 # changes incompatibly
-# LCONF_VERSION = "7"
+LCONF_VERSION = "7"
 
 BBPATH = "${TOPDIR}"
 BBFILES ?= ""
@@ -17,7 +17,6 @@ POKY  = "${POKY_NON_REMOVABLE}"
 POKY += "${OEROOT}/sources/poky/meta-yocto-bsp"
 
 POKY_NON_REMOVABLE  = "${OEROOT}/sources/poky/meta"
-POKY_NON_REMOVABLE += "${OEROOT}/sources/poky/meta-yocto"
 
 #--------------------------
 #
@@ -29,7 +28,6 @@ BASELAYERS ?= " \
     ${OEROOT}/sources/meta-openembedded/meta-webserver \
     ${OEROOT}/sources/meta-openembedded/meta-filesystems \
     ${OEROOT}/sources/meta-openembedded/meta-perl \
-    ${OEROOT}/sources/meta-openembedded/meta-oe \
 "
 
 BBLAYERS_NON_REMOVABLE ?= " \
@@ -69,7 +67,5 @@ BBLAYERS += " \
     ${@'${OPENEMBEDDED}' if os.path.isfile('${OEROOT}/sources/openembedded-core/meta/conf/layer.conf') else '${POKY}'} \
     "
 # BSP dependencies"
+BBLAYERS =+ "${OEROOT}/sources/meta-openembedded/meta-oe"
 BBLAYERS =+ "${OEROOT}/sources/meta-openembedded/meta-python"
-
-# Ams bsp layer
-BBLAYERS =+ "${OEROOT}/sources/ams/meta-ams-bsp"
